--- a/proyecto/home/templates/home/componentes/navbar.html
+++ b/proyecto/home/templates/home/componentes/navbar.html
@@ -10,10 +10,10 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Secciones</a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Lista de secciones</a></li>
+                        <li><a class="dropdown-item" href="{% url 'empleados:seccion_list' %}">Lista de secciones</a></li>
                         <li><a class="dropdown-item" href="#">Buscar seccion</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="#">Lista de Empleados</a></li>
                     </ul>
                 </li>
             </ul>
