--- a/proyecto/home/templates/home/home_index.html
+++ b/proyecto/home/templates/home/home_index.html
@@ -6,23 +6,19 @@
 {% endblock title %}
 
 {% block body_title %}
-    WEB de Gestion de datos sobre empleados
+    WEB de Gestion de datos sobre Empleados
 {% endblock body_title %}
 
 {% block content %}
 <ul>
     <h3>
-        <a href= "{% url 'empleados:seccion_list' %}"> - Acceder a secciones.</a>
+        <a href= "{% url 'empleados:seccion_list' %}"> - Acceder a Secciones.</a>
     </h3>
 </ul>
 <ul>
     <h3>
-        <a href= ""> - Acceder a Ingenieros en Jefe.</a>
+        <a href= ""> - Acceder a Empleados.</a>
     </h3>
 </ul>
-<ul>
-    <h3>
-        <a href= ""> - Acceder a Obreros.</a>
-    </h3>
-</ul>
+
 {% endblock content %}
