--- a/proyecto/empleados/templates/empleados/seccion_delete.html
+++ b/proyecto/empleados/templates/empleados/seccion_delete.html
@@ -1,32 +1,23 @@
 {% extends 'home/base.html' %}
 
 {% block title %}
-{% if form.instance.pk %}
-    Secciones : Editar Seccion
-{% else %}
-    Secciones : Crear Seccion
-{% endif %}
+    Secciones : Eliminar Seccion
 {% endblock title %}
 
 {% block body_title %}
-
-Secciones
+    Secciones
 {% endblock body_title %}
-
 {% block body_subtitle %}
-{% if form.instance.pk %}
-Modifique la Seccion
-{% else %}
-Crear una Seccion nueva
-{% endif %}
+    Eliminar Seccion
 {% endblock body_subtitle %}
 
 {% block content %}
+
+<p class="fs-5  fst-italic ">¿Confirma eliminar "{{ object.nombre }}"?</p>
     <form method="post">
         {% csrf_token %}
-        <table>
-            {{form.as_table}}
-        </table>
         <button type="submit">Confirmar</button>
     </form>
+    <a href="{% url 'empleados:seccion_list' %}">Volver a Secciones</a>
+
 {% endblock content %}
