--- a/proyecto/home/templates/home/home_index.html
+++ b/proyecto/home/templates/home/home_index.html
@@ -17,7 +17,11 @@
 </ul>
 <ul>
     <h3>
-        <a href= ""> - Acceder a Empleados.</a>
+        <a href= "{% url 'empleados:ingeniero_list' %}"> - Acceder a Ingenieros.</a>
+    </h3>
+    <h3>
+
+        <a href= "{% url 'empleados:obrero_list' %}"> - Acceder a Obreros.</a>
     </h3>
 </ul>
 
